# PARC2024-Engineers-League

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
intro-to-robotics-workshop-2024/: package.xml  setup.cfg  setup.py
log/: latest_build
parc_robot/: setup.cfg  setup.py
parc_robot_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
parc_robot_bringup/config/: controllers.yaml  task1_route1_params.yaml  task1_route2_params.yaml  task1_route3_params.yaml  task2_route1_params.yaml  task2_route2_params.yaml  task2_world_coordinates.yaml
parc_robot_bringup/launch/: task1_launch.py  task2_launch (copy).py  task2_launch.py
parc_robot_bringup/parc_robot_bringup/: gps2cartesian.py
parc_robot_bringup/rviz/: parc_robot_bringup.rviz
parc_robot_bringup/scripts/: get_param.py  gps_use.py  load_task1_params.py  load_task2_params.py  move_robot.py  parc_robot_nav.py  parc_robot_routes.py  task1_params.py  task1_solution.py  task1_test.py  task2_test.py
parc_robot_bringup/worlds/: parc_task1 (another copy).world  parc_task1 (copy).world  parc_task1.world  parc_task11.world  parc_task2.world  tomato_field (another copy).world  tomato_field (copy).world  tomato_field.world  world1.world  world2.world  world3.world
parc_robot_control/: package.xml  setup.cfg  setup.py
parc_robot_description/: package.xml
parc_robot_description/launch/: description_launch.py  robot_state_publisher_launch.py
parc_robot_description/urdf/: enclosure.xacro  gps.xacro  imu.xacro  parc_robot.xacro  parc_robot_gazebo.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro  seeder.xacro  sensors.xacro  side_cameras.xacro  ydlidar.xacro  zed2.xacro
parc_robot_gazebo/: setup.cfg  setup.py
parc_robot_interfaces/: CMakeLists.txt
parc_robot_msgs/: CMakeLists.txt  package.xml
parc_robot_teleop/: CMakeLists.txt  package.xml
parc_robot_teleop/launch/: teleop_launch.py
resources/: sample-submission-readme.md
solution-horizon/: README.md
solution-horizon/autonomous_navigation/: package.xml  setup.py
(+71 files in other folders)
